--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ dj-database-url==0.5.0
 dj-static==0.0.6
 Django==1.11
 django-bootstrap4==1.0.1
+django-heroku==0.3.1
 gunicorn==19.9.0
 Pillow==6.2.0
 psycopg2==2.8.3
